<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ranca_upas_bandung">

    <TextView
        android:id="@+id/WelcomeToAlamendah"
        android:layout_width="319dp"
        android:layout_height="170dp"
        android:text="@string/welcome_to_desaalamendah"
        android:fontFamily="@font/abhaya_libre_medium"
        android:textSize="48sp"
        android:textColor="@color/colorText1"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/WelcomeMessage"
        android:layout_width="262dp"
        android:layout_height="50dp"
        android:text="@string/welcome_message"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeToAlamendah"
        app:layout_constraintVertical_bias="0.726" />

    <Button
        android:id="@+id/ButtonNext"
        android:layout_width="99dp"
        android:layout_height="35dp"
        android:background="@drawable/rounded_white"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeMessage" />

</androidx.constraintlayout.widget.ConstraintLayout>