<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ProfileDesa">

        <ImageView
            android:id="@+id/imageView34"
            android:layout_width="418dp"
            android:layout_height="187dp"
            android:contentDescription="@string/profile_desa"
            android:src="@drawable/profile_desa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView45"
            android:layout_width="375dp"
            android:layout_height="43dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/syne_mono"
            android:text="@string/tentang_kami"
            android:textAlignment="center"
            android:textColor="@color/colorText5"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

        <TextView
            android:id="@+id/textView46"
            android:layout_width="85dp"
            android:layout_height="58dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/nerko_one_regular"
            android:text="@string/hai"
            android:textAlignment="center"
            android:textColor="@color/colorText2"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView34"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="192dp"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/selamat_datang"
            android:textAlignment="center"
            android:textColor="@color/colorText2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView46"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="350dp"
            android:layout_height="175dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/profile_tentang_kami"
            android:textColor="@color/colorText2"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView47"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:layout_width="93dp"
            android:layout_height="83dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/leaf"
            android:contentDescription="@string/kenapa_desa_wisata_alamendah"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView48"
            app:layout_constraintVertical_bias="0.0"/>

        <TextView
            android:id="@+id/textView49"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/kenapa_desa_wisata_alamendah"
            android:textAlignment="center"
            android:textColor="@color/colorText2"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView48"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="413dp"
            android:layout_height="365dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/Background5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView49"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imageView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:contentDescription="@string/tentang_kami"
                android:src="@drawable/garis_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView36"
                android:layout_width="71dp"
                android:layout_height="74dp"
                android:layout_marginStart="46dp"
                android:contentDescription="@string/desa_yang_lengkap"
                android:src="@drawable/plant"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView35"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:layout_width="190dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:text="@string/desa_yang_lengkap"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/colorText2"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView36"
                app:layout_constraintTop_toBottomOf="@id/imageView35"
                app:layout_constraintVertical_bias="0.0"/>

            <ImageView
                android:id="@+id/imageView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:src="@drawable/garis_white"
                android:contentDescription="@string/tentang_kami"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView36"
                app:layout_constraintVertical_bias="0.0"/>

            <ImageView
                android:id="@+id/imageView38"
                android:layout_width="71dp"
                android:layout_height="74dp"
                android:layout_marginStart="46dp"
                android:contentDescription="@string/satu_satunya"
                android:src="@drawable/coffe_bean"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView37"
                app:layout_constraintVertical_bias="0.0" />
            
            <TextView
                android:layout_width="190dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:text="@string/desa_yang_lengkap"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/colorText2"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView38"
                app:layout_constraintTop_toBottomOf="@id/imageView37"
                app:layout_constraintVertical_bias="0.0"/>

            <ImageView
                android:id="@+id/imageView39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:contentDescription="@string/satu_satunya"
                android:src="@drawable/garis_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView38"
                app:layout_constraintVertical_bias="0.0"/>

            <ImageView
                android:id="@+id/imageView40"
                android:layout_width="71dp"
                android:layout_height="74dp"
                android:layout_marginStart="46dp"
                android:contentDescription="@string/banyak_prasarana"
                android:src="@drawable/food"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView39"
                app:layout_constraintVertical_bias="0.0"/>

            <TextView
                android:layout_width="190dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:text="@string/banyak_prasarana"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/colorText2"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView40"
                app:layout_constraintTop_toBottomOf="@id/imageView39"
                app:layout_constraintVertical_bias="0.0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</ScrollView>